idl-toolkit/models/oldtest/test/errors/custom/CustomException.vmodl
/* **********************************************************
 * Copyright 2013 VMware, Inc.  All rights reserved.
 *      -- VMware Confidential
 * **********************************************************/
package com.vmware.vapi.test.errors.custom;

/** Custom Exception type */
class CustomException extends Exception {

    /** String field */
    String explanation;
}
